--- a/index.html
+++ b/index.html
@@ -2,45 +2,59 @@
 <html>
   <head>
     <title>AR.js Image Tracker</title>
-    <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/AR-js-org/AR.js/3.4.2/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <style>
-      #customText {
-        position: fixed;
-        top: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        padding: 10px 20px;
-        border-radius: 10px;
-        font-family: sans-serif;
-        display: none;
-        z-index: 1000;
-      }
+       .arjs-loader {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .arjs-loader div {
+    text-align: center;
+    font-size: 1.25em;
+    color: white;
+  }
     </style>
   </head>
   <body style="margin: 0; overflow: hidden;">
     <div id="customText">🎉 You found the marker!</div>
 
-    <a-scene
-      embedded
-      arjs="trackingMethod: best; sourceType: webcam;"
-    >
-      <a-nft
-        type="nft"
-        url="marker/vouka-ar"
-        smooth="true"
-        smoothCount="10"
-        smoothTolerance="0.01"
-        smoothThreshold="5"
-        id="my-nft-marker"
-      >
-        <a-box color="tomato" position="0 0.5 0"></a-box>
-      </a-nft>
+    <div class="arjs-loader">
+      <div>Loading, please wait...</div>
+    </div>
 
-      <a-entity camera></a-entity>
-    </a-scene>
+    <!-- a-frame scene -->
+  <a-scene
+  vr-mode-ui="enabled: false;"
+  renderer="logarithmicDepthBuffer: true;"
+  embedded
+  arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+>
+  <!-- a-nft is the anchor that defines an Image Tracking entity -->
+  <!-- on 'url' use the path to the Image Descriptors created before. -->
+  <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
+  <a-nft
+    type="nft"
+    url="marker/vouka-ar"
+    smooth="true"
+    smoothCount="10"
+    smoothTolerance=".01"
+    smoothThreshold="5"
+  >
+
+  </a-nft>
+  <!-- static camera that moves according to the device movemenents -->
+  <a-entity camera></a-entity>
+</a-scene>
 
     <script>
       const marker = document.querySelector("#my-nft-marker");
