--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
   <a-nft
     type="nft"
-    url="/marker/vouka"
+    url="https://github.com/chris-traianos/voukakrato-ar/tree/b1a7fa5dfe361c5535827d7e659b73c455d35c53/marker/vouka"
     smooth="true"
     smoothCount="10"
     smoothTolerance=".01"
